# spherely

./: .clang-format  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CMakeLists.txt  LICENSE  README.md  generate_spherely_vfunc_types.py  pyproject.toml  spatial_index_plan.md
.github/workflows/: ci-additional.yml  lint.yaml  release.yml  run-tests.yaml
ci/: environment-dev.yml  environment.yml  install_3rdparty.cmd  install_3rdparty.sh  s2geography-add-include-dir.patch  s2geography-add-openssl-as-requirement.patch  vcpkg.json
docs/: Makefile  api.rst  api_hidden.rst  conf.py  environment.yml  index.md  index.rst  install.md  make.bat
src/: accessors-geog.cpp  arrow_abi.h  boolean-operations.cpp  constants.hpp  coords.cpp  creation.cpp  creation.hpp  generate_spherely_vfunc_types.py  geoarrow.cpp  geography.cpp  geography.hpp  io.cpp  main.cpp  predicates.cpp  predicates.hpp  predicates_common.cpp  projections.cpp  projections.hpp  pybind11.hpp  s2geography_addons.cpp  s2geography_addons.hpp  s2shapely.cpp  s2shapely.pyi  spatial_index.cpp  spherely.cpp  spherely.pyi  test.cpp
tests/: conftest.py  test_accessors.py  test_boolean_operations.py  test_boolean_operations_concurrency.py  test_coords.py  test_creation.py  test_geoarrow.py  test_geography.py  test_io.py  test_predicates.py  test_spatial_index.py
