[build-system]
requires = [
    "scikit_build_core[rich]",
    "pybind11",
]
build-backend = "scikit_build_core.build"

[project]
name = "spherely"
version = "0.0.1"
description = "Manipulation and analysis of geometric objects on the sphere"
keywords = ["gis", "geometry", "s2geometry", "shapely"]
readme = "README.md"
license = {text = "BSD 3-Clause"}
authors = [
    {name = "Benoît Bovy"},
]
maintainers = [
    {name = "Spherely contributors"},
]
requires-python = ">=3.10"
dependencies = ["numpy"]

[project.urls]
Home = "https://spherely.readthedocs.io"
Repository = "https://github.com/benbovy/spherely"

[project.optional-dependencies]
test = ["pytest>=6.0"]

[tool.scikit-build]
sdist.exclude = [".github"]

[tool.mypy]
files = ["tests", "src/spherely.pyi"]
show_error_codes = true
warn_unused_ignores = true
